--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   outline: none;
   font-family: 'Montserrat', sans-serif;
-
 }
 
 body {
@@ -19,7 +18,7 @@ nav button {
   color: #000;
   font-size: 1em;
   cursor: pointer;
-  transition: .4s;
+  transition: 0.4s;
 }
 
 a:hover,
@@ -36,7 +35,7 @@ label {
   display: flex;
   flex-direction: column;
   margin-bottom: 1px;
-  gap: .3em;
+  gap: 0.3em;
 }
 
 label span {
@@ -44,14 +43,16 @@ label span {
   text-align: left;
 }
 
-input, textarea {
+input,
+textarea {
   border: none;
   border-bottom: 1px solid #ccc;
-  padding: .8em 0;
+  padding: 0.8em 0;
   background-color: transparent;
 }
 
-input::placeholder, textarea::placeholder {
+input::placeholder,
+textarea::placeholder {
   color: #aaa;
 }
 
@@ -63,4 +64,45 @@ input::placeholder, textarea::placeholder {
   border-radius: 10px;
   width: 120px;
   font-weight: bold;
+  border: none;
+  padding: 10px 15px;
+  font-size: 1em;
+}
+
+.btn.btn-dark {
+  background-color: #000;
+  border-radius: 0;
+}
+
+.btn.btn-outline {
+  background-color: transparent;
+  border-radius: 0;
+  color: #000;
+  border: 1px solid #000;
+  padding: 7px 30px;
+}
+
+.btn:hover {
+  background-color: #0f730c;
+  color: #fff;
+}
+
+.btn.btn-outline {
+  background-color: #000;
+}
+
+.btn.btn-danger:hover {
+  background-color: #dc3545;
+}
+
+button[disable]{
+  background-color: #aaa;
+}
+
+.container .error {
+  color: #721c24;
+  background-color: #f8d7da;
+  border: 1px solid #f5c6cb;
+  padding: 5px;
+  border-radius: 5px;
 }
