--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,13 +1,18 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  outline: none;
-  font-family: 'Montserrat', sans-serif;
-}
-
 body {
   background-color: #f6fcff;
+  padding: 0;
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+}
+
+input::placeholder,
+textarea::placeholder {
+  font-family: "Montserrat", sans-serif;
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
 }
 
 a,
@@ -16,9 +21,10 @@ nav button {
   background-color: transparent;
   border: none;
   color: #000;
+  transition: 0.4s;
   font-size: 1em;
   cursor: pointer;
-  transition: 0.4s;
+  font-family: "Montserrat", sans-seri;
 }
 
 a:hover,
@@ -26,6 +32,7 @@ nav button:hover {
   color: #bbb;
 }
 
+/* form styles */
 form {
   max-width: 40%;
   margin: 0 auto;
@@ -35,19 +42,20 @@ label {
   display: flex;
   flex-direction: column;
   margin-bottom: 1em;
-  gap: 0.3em;
 }
 
 label span {
+  margin-bottom: 0.3em;
   font-weight: bold;
   text-align: left;
 }
 
 input,
 textarea {
+  box-sizing: border-box;
   border: none;
   border-bottom: 1px solid #ccc;
-  padding: 0.8em 0;
+  padding: 0.8em 0em;
   background-color: transparent;
 }
 
@@ -87,7 +95,7 @@ textarea::placeholder {
   color: #fff;
 }
 
-.btn.btn-outline {
+.btn.btn-outline:hover {
   background-color: #000;
 }
 
@@ -95,7 +103,7 @@ textarea::placeholder {
   background-color: #dc3545;
 }
 
-button[disable]{
+button[disabled] {
   background-color: #aaa;
 }
 
