--- a/src/components/PostDetail/styles.module.scss
+++ b/src/components/PostDetail/styles.module.scss
@@ -5,7 +5,7 @@
   transition: 0.2s;
 
   &:hover {
-    transform: scale(1.02);
+    transform: scale(1.02) translateY(-2px);
   }
 
   & .imgCard {
